# Spring-Change-Detection-Application

./: README.md
.devcontainer/: devcontainer.json
Spring-Change-Detection-Application-main/Spring-Change-Detection-Application-main/: LICENSE  README.md  pyproject.toml  requirements.txt
Spring-Change-Detection-Application-main/Spring-Change-Detection-Application-main/notebook/: Tests.ipynb
Spring-Change-Detection-Application-main/Spring-Change-Detection-Application-main/src/: app.py  config.py  data_processing.py  file_handler.py  icon_processing.py
Spring-Change-Detection-Application-main/Spring-Change-Detection-Application-main/src/ui/: analysis.py  results.py  sidebar.py  styles.py  uploads.py
Spring-Change-Detection-Application-main/Spring-Change-Detection-Application-main/src/utils/: load_lottie.py  session_state.py
