[project]
name = "spring-change-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "HASSANE SKIKRI",email = "hassaneskikri@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.46.1,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "plotly (>=6.2.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "spring_change_detection", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"